--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 		<img data-src="/img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 		<div class="reveal">
 			<div class="slides">
-			<img src="/img/p1.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt="">
-			<section><img src="/img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
+				<section> 
+				<img src="/img/p1.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt="">
+				<img src="/img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt="">
+				</section>
+			
 			</div>
 		</div>
 
