--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
 		</script>
 	</head>
 	<body>
-		<img data-src="/img/l1.png" style="position:absolute; max-width: 70px; " alt="">
+		<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 		<div class="reveal">
 			<div class="slides">
-				<section> 
-				<img src="/img/p1.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt="">
-				<img src="/img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt="">
-				</section>
-			
+			<img data-src="/img/p1.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt="">
+			<section><img src="/img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
 			</div>
 		</div>
 
