--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 		<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 		<div class="reveal">
 			<div class="slides">
-			<section><img data-src="img/p1.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt=""></section>
-			<section><img data-src="img/p2.jpg" style=" margin-top: 0px;  margin-bottom: 300px; border: none;" width="508px; position: absolute; " alt=""></section>
+			<section><img data-src="img/p1.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
+			<h6 style="position: relative;" >.portda</h6>
+			<section><img data-src="img/p2.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
+			<section><img data-src="img/p3.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
 			<section><img data-src="img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
 			</div>
 		</div>
