--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				width: 960,
 				height: 700,
 				minScale: 0.77,
+				maxScale: 1.5,
 				dependencies: [
 					{ src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js', async: true },
 					{ src: 'plugin/multiplex/client.js', async: true },
