--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 		<div class="reveal">
 			<div class="slides">
-			<section><img data-src="img/p1.jpg" style="border: none;" width="508px; position: absolute; " alt=""> <p style="width: 660px; font-size: 22px ; position: absolute;" >.portda</p></section>
+			<section><img data-src="img/p1.jpg" style="border: none;" width="508px; position: absolute; " alt=""> </section>
 			<section><img data-src="img/p2.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
 			<section><img data-src="img/p3.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
 			<section><img data-src="img/p4.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
@@ -45,7 +45,7 @@
 				width: 960,
 				height: 700,
 				minScale: 0.77,
-				maxScale: 2,
+				maxScale: 1,
 				dependencies: [
 					{ src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js', async: true },
 					{ src: 'plugin/multiplex/client.js', async: true },
