--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>sallyWebzine#</title>
+		<title>sallyWebzine#1</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -26,11 +26,11 @@
 		<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 		<div class="reveal">
 			<div class="slides">
-			<section><img data-src="img/p1.jpg" style="border: none;" width="508px; position: absolute; " alt=""> </section>
-			<section><img data-src="img/p2.jpg" style="border: none;" width="508px; position: absolute; " alt=""></section>
-			<section><img data-src="img/p3.jpg" style="border: none;" width="490px; position: absolute; " alt=""></section>
-			<section><img data-src="img/p4.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
-			<section><img data-src="img/p13.jpg" style="border: none;" width="508px; position: absolute;  " alt=""></section>
+			<section><img data-src="img/p1.jpg" style="border: none;" width="400px; position: absolute; " alt=""> </section>
+			<section><img data-src="img/p2.jpg" style="border: none;" width="400px; position: absolute; " alt=""></section>
+			<section><img data-src="img/p3.jpg" style="border: none;" width="400px; position: absolute; " alt=""></section>
+			<section><img data-src="img/p4.jpg" style="border: none;" width="400px; position: absolute;  " alt=""></section>
+			<section><img data-src="img/p13.jpg" style="border: none;" width="400px; position: absolute;  " alt=""></section>
 			</div>
 		</div>
 
@@ -44,7 +44,7 @@
 				hash: true,
 				width: 960,
 				height: 700,
-				minScale: 0.76,
+				minScale: 0.72,
 				maxScale: 1,
 				dependencies: [
 					{ src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js', async: true },
