--- a/index.html
+++ b/index.html
@@ -1,60 +1,86 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>sallyWebzine#1</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+	<title>sallyWebzine#1</title>
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/monokai.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/theme/black.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
-		<div class="reveal">
-			<div class="slides">
-			<section><img data-src="img/p1.jpg" style="border: none;" width="493x; position: absolute; " alt=""> </section>
-			<section><img data-src="img/p2.jpg" style="border: none;" width="493px; position: absolute; " alt=""></section>
-			<section><img data-src="img/p3.jpg" style="border: none;" width="493px; position: absolute; " alt=""></section>
-			<section><img data-src="img/p4.jpg" style="border: none;" width="493px; position: absolute;  " alt=""></section>
-			<section><img data-src="img/p5.jpg" style="border: none;" width="493px; position: absolute;  " alt=""></section>
-			</div>
+	<!-- Theme used for syntax highlighting of code -->
+	<link rel="stylesheet" href="lib/css/monokai.css">
+
+	<!-- Printing and PDF exports -->
+	<script>
+		var link = document.createElement('link');
+		link.rel = 'stylesheet';
+		link.type = 'text/css';
+		link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+		document.getElementsByTagName('head')[0].appendChild(link);
+	</script>
+</head>
+
+<body>
+	<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
+	<div class="reveal">
+		<div class="slides">
+			<section><img data-src="img/p1.jpg" style="border: none;" width="493x; position: absolute; " alt="">
+			</section>
+			<section><img data-src="img/p2.jpg" style="border: none;" width="493px; position: absolute; " alt="">
+			</section>
+			<section><img data-src="img/p3.jpg" style="border: none;" width="493px; position: absolute; " alt="">
+			</section>
+			<section><img data-src="img/p4.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
+			<section><img data-src="img/p5.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
+			<section><img data-src="img/p6.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
+			<section><img data-src="img/p7.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
 		</div>
+	</div>
 
-		<script src="js/reveal.js"></script>
+	<script src="js/reveal.js"></script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				hash: true,
-				width: 960,
-				height: 700,
-				minScale: 0.715,
-				maxScale: 1,
-				dependencies: [
-					{ src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js', async: true },
-					{ src: 'plugin/multiplex/client.js', async: true },
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/highlight/highlight.js' },
-					{ src: 'plugin/notes/notes.js', async: true }
-				]
-			});
-		</script>
-	</body>
+	<script>
+		// More info about config & dependencies:
+		// - https://github.com/hakimel/reveal.js#configuration
+		// - https://github.com/hakimel/reveal.js#dependencies
+		Reveal.initialize({
+			hash: true,
+			width: 960,
+			height: 700,
+			minScale: 0.715,
+			maxScale: 1,
+			dependencies: [{
+					src: '//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js',
+					async: true
+				},
+				{
+					src: 'plugin/multiplex/client.js',
+					async: true
+				},
+				{
+					src: 'plugin/markdown/marked.js'
+				},
+				{
+					src: 'plugin/markdown/markdown.js'
+				},
+				{
+					src: 'plugin/highlight/highlight.js'
+				},
+				{
+					src: 'plugin/notes/notes.js',
+					async: true
+				}
+			]
+		});
+	</script>
+</body>
+
 </html>
