--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 			</section>
 			<section><img data-src="img/p7.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
+			<section><img data-src="img/p8.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
+			<section><img data-src="img/p9.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			</section>
 		</div>
 	</div>
 
