--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			</section>
 			<section><img data-src="img/p12.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
+			<section><img data-src="img/p13.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			</section>
 		</div>
 	</div>
 
