--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
 	<img data-src="img/l1.png" style="position:absolute; max-width: 70px; " alt="">
 	<div class="reveal">
 		<div class="slides">
-			<section><img data-src="img/p1.jpg" style="border: none;" width="493x; position: absolute; " alt="">
+			<section><img src="img/p1.jpg" style="border: none;" width="493x; position: absolute; " alt="">
 			</section>
-			<section><img data-src="img/p2.jpg" style="border: none;" width="493px; position: absolute; " alt="">
+			<section><img src="img/p2.jpg" style="border: none;" width="493px; position: absolute; " alt="">
 			</section>
-			<section><img data-src="img/p3.jpg" style="border: none;" width="493px; position: absolute; " alt="">
+			<section><img src="img/p3.jpg" style="border: none;" width="493px; position: absolute; " alt="">
 			</section>
-			<section><img data-src="img/p4.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			<section><img src="img/p4.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
-			<section><img data-src="img/p5.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			<section><img src="img/p5.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
-			<section><img data-src="img/p6.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			<section><img src="img/p6.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
-			<section><img data-src="img/p7.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			<section><img src="img/p7.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
-			<section><img data-src="img/p8.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
+			<section><img src="img/p8.jpg" style="border: none;" width="493px; position: absolute;  " alt="">
 			</section>
-			<section><img data-src="img/p9.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			<section><img src="img/p9.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
-			<section><img data-src="img/p10.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			<section><img src="img/p10.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
-			<section><img data-src="img/p11.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			<section><img src="img/p11.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
-			<section><img data-src="img/p12.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			<section><img src="img/p12.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
-			<section><img data-src="img/p13.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
+			<section><img src="img/p13.jpg" style="border: none;" width="493px; position: absolute;  " alt=""  >
 			</section>
 			<section>
 				<iframe data-src="https://www.instagram.com/malditoapu/" data-preload></iframe>
